--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   </div>
                   <form class="destinations-form">
                      <div class="input-line">
-                        <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
+                        <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF THE PACKAGE?" />
                         <button type="button" id="hit1" name="packagename-submit" class="form-submit btn btn-special">Find</button>
                      </div>
                   </form>
@@ -69,7 +69,7 @@
                   <form class="destinations-form">
                       
                      <div class="input-line">
-                        <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT TYPE OF PACKAGE ARE YOU SEARCHING FOR?" />
+                        <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT IS THE PACKAGE CATEGORY?" />
                         <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
                      </div>
                   </form>
