--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <div class="hero-text align-center">
                       <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
                   </div>
-                  <form class="destinations-form">
+                  <form id="nameSearch" class="destinations-form">
                      <div class="input-line">
                         <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF THE PACKAGE?" />
                         <button type="button" id="hit1" name="packagename-submit" class="form-submit btn btn-special">Find</button>
