--- a/index.html
+++ b/index.html
@@ -1,164 +1,28 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>openSCADpm | Home</title>
-
-      <meta name="description" content="Traveling HTML5 Template" />
-      <meta name="author" content="Design Hooks" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700" rel="stylesheet" />
-      <link href="img/favicon.png" type="image/x-icon" rel="shortcut icon" />
-      <link href="css/screen.css" rel="stylesheet" />
-   </head>
-   <body class="home" id="page">
-      <!-- Header -->
-      <header class="main-header">
-         <div class="container">
-            <div class="header-content">
-               <a href="index.html">
-                  <img src="img/site-identity.png" alt="site identity" />
-               </a>
-
-               <nav class="site-nav">
-                  <ul class="clean-list site-links">
-                     <li>
-                        <a href="index.html">Home</a>
-                     </li>
-                     <li>
-                        <a href="http://www.openscad.org/">OpenSCAD</a>
-                     </li>
-                     <li>
-                        <a href="pages/OpenSCADpm.html">OpenSCADpm</a>
-                     </li>
-                     <li>
-                        <a href="pages/Tutorial.html">Tutorial</a>
-                     </li>
-                     <li>
-                        <a href="pages/Documentation.html">Documentation</a>
-                     </li>
-                     <li>
-                        <a href="pages/Support.html">Support</a>
-                     </li>
-                  </ul>
-
-               </nav>
-            </div>
-         </div>
-      </header>
-
-      <!-- Main Content -->
-      <div class="content-box">
-         <!-- Hero Section -->
-         <section class="section section-hero">
-            <div class="hero-box">
-               <div class="container">
-                  <div class="hero-text align-center">
-                     <h1>Find your OpenSCAD Package!</h1>
-                     <p>and build the model of your dreams!</p>
-                  </div>
-                  <div class="hero-text align-center">
-                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
-                  </div>
-                  <form id="nameSearch" class="destinations-form">
-                     <div class="input-line">
-                        <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF THE PACKAGE?" />
-                        <button type="button" id="hit1" name="packagename-submit" class="form-submit btn btn-special">Find</button>
-                     </div>
-                  </form>
-                   </br></br></br></br>
-                  <form id="catSearch" class="destinations-form">
-                      
-                     <div class="input-line">
-                        <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT IS THE PACKAGE CATEGORY?" />
-                        <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
-                     </div>
-                  </form>
-               </div>
-            </div>
-
-            <!-- Statistics Box -->
-
-            <div class="container">
-                <div class="hero-text align-center">
-                    <p><b>Popular Categories</b></p>
-                </div>
-               <div class="statistics-box">
-                  <div class="statistics-item">
-                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Ageometry&type=Repositories">Geometry</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Aarchitecture&type=Repositories">Architecture</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Amechanical&type=Repositories">Mechanical</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Aartistic&type=Repositories">Artistic</a></span>
-                  </div>
-               </div>
-            </div>
-         </section>
-
-      </div>
-
-      <!-- Footer -->
-      <footer class="main-footer">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-5">
-                  <div class="widget widget_links">
-                     <h5 class="widget-title">Top Packages</h5>
-                     <ul>
-                        <li><a href="https://github.com/jiaxinsu2016/ospm_tree">ospm_tree</a></li>
-                        <li><a href="https://github.com/jiaxinsu2016/ospm_star">ospm_star</a></li>
-                        <li><a href="https://github.com/jiaxinsu2016/ospm_empty_center_cube">ospm_empty_center_cube</a></li>
-                        <li><a href="https://github.com/jiaxinsu2016/ospm_pavilion">ospm_pavilion</a></li>
-                        <li><a href="https://github.com/jiaxinsu2016/ospm_dice">ospm_dice</a></li>
-                     </ul>
-                  </div>
-               </div>
-
-               <div class="col-md-5">
-                  <div class="widget widget_links">
-                     <h5 class="widget-title">OpenSCAD</h5>
-                     <ul>
-                        <li><a href="https://github.com/openscad/openscad/">GitHub</a></li>
-                        <li><a href="http://www.openscad.org/documentation.html">Documentation</a></li>
-                        <li><a href="http://www.openscad.org/gallery.html">Gallery</a></li>
-                        <li><a href="http://www.openscad.org/downloads.html">Downloads</a></li>
-                     </ul>
-                  </div>
-               </div>
-
-               <div class="col-md-9">
-                  <div class="widget widget_social">
-                     <h5 class="widget-title">Learn OpenSCADpm</h5>
-                     <ul>
-                        <li><a href="pages/Tutorial.html">Tutorial</a></li>
-                        <li><a href="pages/Documentation.html">Documentation</a></li>
-                     </ul>
-                  </div>
-               </div>
-
-               <div class="col-md-5">
-                  <div class="widget widget_links">
-                     <h5 class="widget-title">Contact us</h5>
-                     <ul>
-                        <li><a href="pages/Support.html">Stan Peceny (skp2140@columbia.edu)</a></li>
-                        <li><a href="pages/Support.html">Jiaxin Su (js4722@columbia.edu)</a></li>
-                        <li><a href="pages/Support.html">Brennan Wallace (bgw2119@columbia.edu)</a></li>
-                     </ul>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </footer>
-
-      <!-- Scripts -->
-      <script src="js/jquery.js"></script>
-      <script src="js/functions.js"></script>
-   </body>
+	<head>
+		<title>Hank Quinlan, Horrible Cop</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:skp2140@columbia.edu">email</a></li>
+        		<li><a href="https://github.com/brennangw/openSCADpm">github.com/brennangw/openSCADpm</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
