--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>openSCADpm | Home</title>
+      <title>openSCADpm | Search</title>
 
       <meta name="description" content="Traveling HTML5 Template" />
       <meta name="author" content="Design Hooks" />
@@ -22,7 +22,7 @@
                <nav class="site-nav">
                   <ul class="clean-list site-links">
                      <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Search</a>
                      </li>
                      <li>
                         <a href="http://www.openscad.org/">OpenSCAD</a>
@@ -56,9 +56,7 @@
                      <h1>Find your OpenSCAD Package!</h1>
                      <p>and build the model of your dreams!</p>
                   </div>
-                  <div class="hero-text align-center">
-                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
-                  </div>
+
                   <form id="nameSearch" class="destinations-form">
                      <div class="input-line">
                         <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF THE PACKAGE?" />
@@ -73,6 +71,10 @@
                         <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
                      </div>
                   </form>
+                  </br></br></br>
+                  <div class="hero-text align-center">
+                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
+                  </div>
                </div>
             </div>
 
