--- a/pages/Tutorial.html
+++ b/pages/Tutorial.html
@@ -22,7 +22,7 @@
                <nav class="site-nav">
                   <ul class="clean-list site-links">
                      <li>
-                        <a href="../index.html">Home</a>
+                        <a href="../index.html">Search</a>
                      </li>
                      <li>
                         <a href="http://www.openscad.org/">OpenSCAD</a>
