--- a/pages/OpenSCADpm.html
+++ b/pages/OpenSCADpm.html
@@ -71,6 +71,11 @@
                           <p>OpenSCAD is not an interactive modeller. Instead it is something like a 3D-compiler that reads in a script file that describes the object and renders the 3D model from this script file. This gives you (the designer) full control over the modelling process and enables you to easily change any step in the modelling process or make designs that are defined by configurable parameters.</p>
                             
                           <h1>OpenSCADpm</h1>
+                          <p>OpenSCADpm is a package manager for OpenSCAD, akin to Node Package Manager (NPM) or Ruby Gems, and hence allows developers to more easily share and install modules. In sum, OpenSCADpm manages packages and their associated dependencies.</p>
+                          <p>
+
+                            The package manager currently constitutes a command line tool and a website. The command line tool is utilized for the installation and managing of modules by allowing users to use terminal commands. The website serves as a way for packages to be browsed and explained with a high level description.
+                        </p>
                         </article>
  
                  </div>
